                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 11-03-2005 added: [ 1160400 ] Added ControlCheckMark in Python - thanks to gimblefoot
  - 10-03-2005 added: My Music label format now accepts %F for filename
  - 10-03-2005 changed: My Music Nav window now uses a virtual path for better "back" handling (thanks to Elupus for the idea)
  - 10-03-2005 added: Initial support for VideoPlayer.Title for infolabels/infofadelabels.
  - 10-03-2005 added: Option to only remember selected item when traversing up the folder structure(parent folder), not down.
  - 10-03-2005 changed: Unified the way xbmc remember what item was selected in a folder.
  - 10-03-2005 added: Direct url support for built-in command XBMC.PlayMedia(url)
  - 10-03-2005 fixed: Selecting VIDEO_TS.IFO on a dvd would not initiate playback properly.
  - 10-03-2005 fixed: Any dll's atempting to use stat on a dvd would always return success with invalid properties set
  - 10-03-2005 added: Dynamic Range compensation for AC3 if no AC3/DTS receiver is available.
  - 09-03-2005 changed: music files, duration of files without tags is shown when tag reading is enabled
  - 09-03-2005 fixed: Only the first python control was reading from references.xml correctly.
  - 09-03-2005 fixed: Memory of loaded picture was not cleared correctly on Slideshow exit.
  - 09-03-2005 fixed: Upgrade code incorrectly returned false if the database was empty.
  - 09-03-2005 added: Default options for viewmode, brightness, contrast + gamma.
  - 09-03-2005 added: Resume playback option to video context menu.  It will remember where you were last at in a video, and return there when you select this option.